--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   ],
   "author": "matthiassnellings",
   "license": "private",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^4.13.1"
   },
