--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "private",
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^4.13.1"
+    "eslint": "4.13.1"
   },
   "repository": {
     "type": "git",
